# opium

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  README.md  TODO.txt  argv.osl  array.osl  base.osl  blob.osl  builtins.osl  console.osl  coroutines.osl  format.osl  io.osl  itertools.osl  json.osl  list.osl  main.cpp  number.osl  opium-osl.osl  opium.pc  prolog-std.scm  regex.osl  run-osl  string.osl  subprocess.osl  test-elements.scm  test.json  test.osl  test.scm  test.sup.scm  unions.scm  vector.osl  zmq.osl
apps/opium/: main.cpp  repl.cpp  repl.hpp
apps/opium-pp/: main.cpp
apps/osl/: debugger.hpp  main.cpp
include/opium/: code_transform_utils.hpp  code_transformer.hpp  cons_list_view.inl  exceptions.hpp  format.hpp  groups.hpp  hash.hpp  lisp_parser.hpp  lisp_reader.hpp  logging.hpp  match.hpp  match.inl  memory.hpp  opium.hpp  predicate_runtime.hpp  predicate_runtime.inl  pretty_print.hpp  prolog.hpp  prolog.inl  prolog_detail.inl  prolog_repl.hpp  query.hpp  source_location.hpp  value.hpp
include/opium/scheme/: scheme_code_transformer.hpp  scheme_emitter.hpp  scheme_emitter.inl  scheme_emitter_context.hpp  scheme_transformations.hpp  scheme_type_location_map.hpp  scheme_type_system.hpp  scheme_type_system.inl
include/opium/scheme/translator/: exceptions.hpp  match_translation_rules.hpp  scheme_emitter.hpp  scheme_emitter_context.hpp
include/opium/stl/: deque.hpp  list.hpp  map.hpp  string.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
include/opium/utilities/: execution_timer.hpp  path_resolver.hpp  ranges.hpp  separate_stack_executor.hpp  state_saver.hpp
osl/: macros.cpp  macros.hpp  main.cpp  operators.hpp  parse.cpp  parse.hpp  resolve_operator_precedence.cpp  syntax-definitions.opi  syntax_definitions.h.in  unroll_flow.cpp  unroll_flow.hpp
osl/lib/: argv.osl  array.osl  base.osl  blob.osl  builtins.osl  conditionals.osl  console.osl  coroutines.osl  dict.osl  error.osl  exceptions.osl  format.osl  functools.osl  getopt.osl  io.osl  itertools.osl  json.osl  list.osl  loops.osl  maybe.osl  memory.osl  number.osl  optional.osl  pack.osl  process.osl  prolog-std.scm  regex.osl  string.osl  subprocess.osl  tcp.osl  trie.osl  typecast.osl  typecombinators.osl  typeutils.osl  unittest.osl  vector.osl  zmq.osl
osl/plugins/: parameterize.cpp
osl/syntax/: parser.ypp  scanner.l
samples/: example1.scm  example2.scm  test-lambda.scm  test-or.scm  test-struct.scm  test-ts.scm  test.pl  test.scm
src/: code_transformer.cpp  equality.cpp  exceptions.cpp  execution_timer.cpp  hash.cpp  lisp_parser.cpp  lisp_reader.cpp  logging.cpp  match_translation_rules.cpp  opium.cpp  predicate_runtime.cpp  pretty_print.cpp  print_vallue.cpp  print_value.cpp  prolog.cpp  prolog_builtints.cpp  prolog_repl.cpp  scheme_code_flattener.cpp  scheme_code_transformer.cpp  scheme_emitter.cpp  scheme_emitter_context.cpp  scheme_syntax_plugin.cpp  scheme_to_prolog.cpp  scheme_type_location_map.cpp  scheme_type_system.cpp  scheme_unique_identifiers.cpp  singleton_values.cpp  source_location.cpp  value.cpp
t/: ctor-overalod.osl  custom-operators.osl  foreign-inline.osl  iterators.osl  macros.osl  multiret.osl  test-io.osl  test-itertools.osl  test-regexp.osl  test-string.osl  typeclasses.osl
tests/: test_equality.cpp  test_lisp_parser.cpp  test_lisp_reader.cpp  test_match.cpp  test_operator_precedence.cpp  test_predicate_runtime.cpp  test_prolog.cpp  test_quotation.cpp  test_scheme_unique_identifiers.cpp
